--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,16 +4,25 @@ server:
 rocketmq:
   consumer:
     group: SPRINGBOOT_CONSUMER_GROUP
+    # 一次拉取消息最大值，注意是拉取消息的最大值而非消费最大值
     pull-batch-size: 50
   name-server: 192.168.56.101:9876
   producer:
+    # 发送同一类消息的设置为同一个group，保证唯一
     group: SPRINGBOOT_PRODUCER_GROUP
+    # 发送消息超时时间
     send-message-timeout: 5000
+    # 发送消息失败重试次数
     retry-times-when-send-failed: 3
+    # 异步消息重试次数
     retry-times-when-send-async-failed: 3
+    # 消息最大长度
     max-message-size: 4096
+    # 压缩消息阈值
     compress-message-body-threshold: 4096
+    # 是否在内部发送失败时重试另一个broker
     retry-next-server: false
 
 topic:
   order: ORDER
+  orderly: ORDERLY
